--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Calculator</title>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="./normalize.css" />
     <link rel="stylesheet" href="./default.css" />
   </head>
   <body>
@@ -12,25 +13,25 @@
         <div class="row" >
           <button id="clear">C</button>
           <button id="back" class="num">←</button>
-          <button id="devide" class="oper">÷</button>
+          <button id="devide" class="oper">&divide;</button>
         </div>
         <div class="row">
           <button id="seven" class="num">7</button>
           <button id="eight" class="num" >8</button>
           <button id="nine" class="num">9</button>
-          <button id="multiply" class="oper">×</button>
+          <button id="multiply" class="oper">&times;</button>
         </div>
         <div class="row">
           <button id="four" class="num" >4</button>
           <button id="five" class="num">5</button>
           <button id="six" class="num">6</button>
-          <button id="minus" class="oper">-</button>
+          <button id="minus" class="oper">&minus;</button>
         </div>
         <div class="row" >
           <button id="one" class="num">1</button>
           <button id="two" class="num">2</button>
           <button id="three" class="num">3</button>
-          <button id="plus" class="oper">+</button>
+          <button id="plus" class="oper">&plus;</button>
         </div>
         <div class="row" >
           <button id="zero" class="num">0</button>
