--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="row" >
           <button id="clear">C</button>
           <button id="back" class="num">←</button>
-          <button id="devide" class="oper">&divide;</button>
+          <button id="divide" class="oper">&divide;</button>
         </div>
         <div class="row">
           <button id="seven" class="num">7</button>
