--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="buttons" >
         <div class="row" >
           <button id="clear">C</button>
-          <button id="back" class="num">←</button>
+          <button id="back" class="num">&#x2b05;</button>
           <button id="divide" class="oper">&divide;</button>
         </div>
         <div class="row">
