--- a/index.html
+++ b/index.html
@@ -10,30 +10,30 @@
     <div class="calculator" >
       <div id="display"></div>
       <div class="buttons" >
-        <div class="row" >
+        <div class="button-row" >
           <button id="clear">C</button>
           <button id="back" class="num">&#x2b05;</button>
           <button id="divide" class="oper">&divide;</button>
         </div>
-        <div class="row">
+        <div class="button-row">
           <button id="seven" class="num">7</button>
           <button id="eight" class="num" >8</button>
           <button id="nine" class="num">9</button>
           <button id="multiply" class="oper">&times;</button>
         </div>
-        <div class="row">
+        <div class="button-row">
           <button id="four" class="num" >4</button>
           <button id="five" class="num">5</button>
           <button id="six" class="num">6</button>
           <button id="minus" class="oper">&minus;</button>
         </div>
-        <div class="row" >
+        <div class="button-row" >
           <button id="one" class="num">1</button>
           <button id="two" class="num">2</button>
           <button id="three" class="num">3</button>
           <button id="plus" class="oper">&plus;</button>
         </div>
-        <div class="row" >
+        <div class="button-row" >
           <button id="zero" class="num">0</button>
           <button id="equal" class="oper">=</button>
         </div>
