--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Calculator</title>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./normalize.css" />
     <link rel="stylesheet" href="./default.css" />
   </head>
